test/scc/expr/semantic-errors/167.a
167.t:11:10: error: undeclared identifier 'a'